Add offer history, structured deals and offer engagement statistics
